--- a/assets/css/datar-section.css
+++ b/assets/css/datar-section.css
@@ -824,8 +824,11 @@
 
 .nav-search {
     padding: 6px 20px;
-    border-right: 1px solid rgba(255, 255, 255, 0.5);
     cursor: pointer
+}
+
+.nav-search-border {
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .nav-search span {
