--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -774,6 +774,13 @@ th {
     margin-top: 0;
 }
 
+.section-full.no-widgets {
+  padding: 30px 0px;
+}
+.no-widgets .footer-bottom {
+  padding-top: 0px;
+  border-top: 0px;
+}
 
 /*[ Block1 ]
 ///////////////////////////////////////////////////////////
