--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5,6 +5,7 @@
 .details-btn:hover,
 .primary-btn:hover,
 .default-header nav .main-menu .nav-item.submenu ul .nav-item:hover .nav-link,
+.active-testimonial-carousel .owl-dots .owl-dot.active,
 .block2-img span.onsale,
 .woocommerce span.onsale,
 .swal-button:active,
@@ -18,6 +19,7 @@
 .effect1-line,
 .bg0-hov:hover,
 .bg0 {
+    
     background-color: #00ff8c;
 }
 
