--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -782,6 +782,10 @@ th {
   border-top: 0px;
 }
 
+.footer-social.footer-menu a {
+  font-size: 12px;
+}
+
 /*[ Block1 ]
 ///////////////////////////////////////////////////////////
 */
