--- a/assets/css/datarc-custom-dashboard.css
+++ b/assets/css/datarc-custom-dashboard.css
@@ -22,3 +22,6 @@
 .epsilon-dashboard-container--tabs nav a {
     background-color: #fff;
 }
+ .dashicons-admin-tools:before{
+    content: "\f102";
+  }
